Bug 1112154 - Add MSimdBox and inline calls to SIMD constructors. r=bbouvier,jandem